fix nav overflow mobile

--- a/app/assets/style/components/nav.scss
+++ b/app/assets/style/components/nav.scss
@@ -22,7 +22,7 @@ nav {
             -webkit-text-fill-color: transparent;
             background-size: 200% 100%;
             background-position: 100%;
-            transition: background-position 275ms ease;
+            transition: background-position 500ms ease;
             &:hover {
                 text-shadow: 0px 4px 6px $blue;
                 background-position: 0 100%;
@@ -111,14 +111,15 @@ label {
         text-decoration: none;
     }
     .menu {
+        
+        border-radius: 0 0 0 300px;
         position: absolute;
-        right: -100px;
+        width: 100px;
+        height: 195px;
+        right: 0;
         top: -100px;
         z-index: 100;
-        width: 200px;
-        height: 200px;
         background: $black;
-        border-radius: 50% 50% 50% 50%;
         -webkit-transition: .5s ease-in-out;
         transition: .5s ease-in-out;
         box-shadow: 0 0 0 0 $black, 0 0 0 0 $black;
